/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

# Thrift Tutorial
# Mark Slee (mcslee@facebook.com)
#
# This file aims to teach you how to use Thrift, in a .thrift file. Neato. The
# first thing to notice is that .thrift files support standard shell comments.
# This lets you make your thrift file executable and include your Thrift build
# step on the top line. And you can place comments like this anywhere you like.
#
# Before running this file, you will need to have installed the thrift compiler
# into /usr/local/bin.

/**
 * The first thing to know about are types. The available types in Thrift are:
 *
 *  bool        Boolean, one byte
 *  i8 (byte)   Signed 8-bit integer
 *  i16         Signed 16-bit integer
 *  i32         Signed 32-bit integer
 *  i64         Signed 64-bit integer
 *  double      64-bit floating point value
 *  string      String
 *  binary      Blob (byte array)
 *  map<t1,t2>  Map from one type to another
 *  list<t1>    Ordered list of one type
 *  set<t1>     Set of unique elements of one type
 *
 * Did you also notice that Thrift supports C style comments?
 */

// Just in case you were wondering... yes. We support simple C comments too.

/**
 * Thrift files can reference other Thrift files to include common struct
 * and service definitions. These are found using the current path, or by
 * searching relative to any paths specified with the -I compiler flag.
 *
 * Included objects are accessed using the name of the .thrift file as a
 * prefix. i.e. shared.SharedObject
 */

/**
 * Thrift files can namespace, package, or prefix their output in various
 * target languages.
 */
namespace cpp tutorial
namespace java tutorial
namespace php tutorial
namespace perl tutorial



enum WorkerOpType {
  ReadHdfsSplit = 1,
  GetSplit = 2,
  DelSplit = 3,
  MapJob = 4,
  FlatMapJob = 5,
  FilterJob = 6,
  ReduceJob = 7,
  ReduceByKeyJob = 8,
  CountJob = 9,
  MapPairJob = 10,
  GetPairSplit = 11,
  HashSplit = 12,
  CountPairJob = 13,
  FilterPairJob = 14,
  ParaJob = 15
}

struct DoJobArgs {
  1: WorkerOpType workerOpType,
  2: i32 partitionId,
  3: i32 inputId,
  4: i32 hdfsSplitId,
  5: string filePath,
  6: string funcName,
  7: list<i32> shufflePartitionIds,
  8: list<i32> inputIds,
  9: list<string> inputHostNames
}

struct StringNumPair {
   1: string str,
   2: double num
}

struct DoJobReply {
   1: list<string> lines,
   2: list<StringNumPair> pairs,
   3: double reduceResult
}

service WorkerService {
    DoJobReply doJob(1:list<DoJobArgs> doJobArgsArr),
    list<StringNumPair> readPartition(1:i32 partitionId)
}


/**
 * That just about covers the basics. Take a look in the test/ folder for more
 * detailed examples. After you run this file, your generated code shows up
 * in folders with names gen-<language>. The generated code isn't too scary
 * to look at. It even has pretty indentation.
 */
